--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -59,5 +59,13 @@
         </div>
     </div>
     {{ end }}
+
+    <script src="https://utteranc.es/client.js"
+        repo="taha-cmyk/ltn"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+  </script>
 </article>
 {{ end }}
