--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -6,3 +6,4 @@
 <meta property="og:url" content="{{ .Permalink }}">
 <meta property="og:site_name" content="LTN">
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}">
+<meta name="google-adsense-account" content="ca-pub-1972054405555560">
