--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -7,3 +7,4 @@
 <meta property="og:site_name" content="LTN">
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}">
 <meta name="google-adsense-account" content="ca-pub-1972054405555560">
+<meta name="verify-admitad" content="0d20ba0ae9" />
